# HaskellRank

./: LICENSE  README.md  hacker.cabal
app/: Main.hs
test/: LibSpec.hs  SpecHelper.hs
