name:                hacker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/teves-castro/hacker#readme
license:             BSD3
license-file:        LICENSE
author:              Vítor Castro
maintainer:          vcastro70@gmail.com
copyright:           BSD
category:            Hacker Rank
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hacker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , hacker
  default-language:    Haskell2010

test-suite hacker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
                     , SpecHelper
  build-depends:       base
                     , hspec >= 2.4.2
                     , hacker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/teves-castro/hacker
